--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "go-oracle",
   "main": "./lib/go-oracle",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Interface for using Go's oracle tool",
   "activationEvents": ["go-oracle:describe", "go-oracle:callers", "go-oracle:callees"],
-  "repository": "https://github.com/atom/go-oracle",
+  "repository": "https://github.com/rubyist/go-oracle",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
