Use proper activation commands format

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   ],
   "author": "Scott Barron <scott@rubyi.st>",
   "homepage": "https://atom.io/packages/go-oracle",
-  "activationCommands": [
-    "go-oracle:oracle"
-  ],
+  "activationCommands": {
+    "atom-workspace": [
+      "go-oracle:oracle"
+    ]
+  },
   "repository": "https://github.com/rubyist/go-oracle",
   "license": "MIT",
   "engines": {
